src/objects/WorldRegistration__c.object
<CustomObject>
    <fields>
        <fullName>Count_Failed__c</fullName>
        <label>Count Failed</label>
        <summaryFilterItems>
            <field>PlayerRegistration__c.Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>PlayerRegistration__c.WorldRegistration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Pending__c</fullName>
        <label>Count Pending</label>
        <summaryFilterItems>
            <field>PlayerRegistration__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>PlayerRegistration__c.WorldRegistration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Success__c</fullName>
        <label>Count Success</label>
        <summaryFilterItems>
            <field>PlayerRegistration__c.Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>PlayerRegistration__c.WorldRegistration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProdPrefix__c</fullName>
        <label>ProdPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldId__c</fullName>
        <label>WorldId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WorldRegistration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WorldRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorldRegistration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>